# libconf

./: .clang-format  .gitignore  README.md  makefile  meson.build
.github/workflows/: build.yml  tests.yml
examples/: example-1  example-1.c  example-1.conf  meson.build
include/: libconf.h
source/: libconf.c
tests/: test_libconf.c
